<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.orionstark.barberros.controllers.Forgot_Password">
    <android.support.v7.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#eff1f2">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#135084"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="Forgot Password" />

        </android.support.design.widget.AppBarLayout>
        <android.support.v7.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="17dp">
            <EditText
                android:id="@+id/forgot_email_field"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/your_email_address"
                android:padding="8dp"
                android:background="@drawable/border"
                android:shadowColor="#000000"
                />
            <EditText
                android:id="@+id/forgot_password2_field"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/sec_pass"
                android:padding="8dp"
                android:background="@drawable/border"
                android:shadowColor="#000000"
                />
        </android.support.v7.widget.LinearLayoutCompat>
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="bottom"
            android:layout_gravity="bottom">
            <Button
                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="#025f8e"
                android:text="@string/reset"
                android:textColor="#ffffff"
                android:textSize="18sp"/>
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.LinearLayoutCompat>

</android.support.constraint.ConstraintLayout>
